# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  config.py  game_math.py  launcher.py  randomizer.py
brain_games/games/: brain_ap_game.py  brain_calc_game.py  brain_even_game.py  brain_gcd_game.py  brain_gcf_game.py  brain_prime_game.py  calculator.py  even_number.py  greatest_common_divisor.py
brain_games/scripts/: arithmetic_progression.py  brain_ap.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_gcf.py  brain_prime.py  calculator.py  even_number.py  greatest_common_divisor.py  prime_number.py
games/: brain_even_game.py
