[tool.poetry]
name = "bayborodin_brain_games"
version = "0.1.0"
description = "Hexlet Brain Games Project"
authors = ["Nicholas Bayborodin <nicholas.bayborodin@gmail.com>"]
packages = [
    { include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

