[tool.poetry]
name = "bayborodin_brain_games"
version = "0.6.2"
description = "Hexlet Brain Games Project"
authors = ["Nicholas Bayborodin <nicholas.bayborodin@gmail.com>"]
packages = [
    { include = "brain_games" }
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
autopep8 = "^1.5.4"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcf:main"
brain-progression = "brain_games.scripts.brain_ap:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
